--- a/app/src/main/res/layout/activity_tasbeeh.xml
+++ b/app/src/main/res/layout/activity_tasbeeh.xml
@@ -29,7 +29,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/sebha"
+        android:id="@+id/sebhaBody"
         android:layout_width="232dp"
         android:layout_height="234dp"
         android:layout_marginTop="142.36dp"
@@ -49,7 +49,7 @@
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/sebha" />
+        app:layout_constraintTop_toBottomOf="@id/sebhaBody" />
     <!--<LinearLayout-->
     <!--    android:layout_width="137dp"-->
     <!--    android:layout_height="154dp"-->
